--- a/src/components/Admin/Info/AddCustomer/index.css
+++ b/src/components/Admin/Info/AddCustomer/index.css
@@ -1,3 +1,11 @@
 .addCustomer {
   width: 504px;
+  height: 200px;
+  text-align: center;
+}
+
+input {
+  width: 300px;
+  display: block;
+  margin: auto;
 }
