전체적인 스타일 수정 & 적립하기 버그 수정
- 전체적으로 약간의 스타일 적용.
- 적립하기 빠르게 클릭시, 날린 요청의 응답이 오기 전에 또 요청을 날릴 수 있는 버그를 수정.

--- a/src/components/Admin/Search/index.css
+++ b/src/components/Admin/Search/index.css
@@ -1,9 +1,20 @@
 .searchItem {
+  padding: 5px;
+  padding-top: 6px;
   border: 0px;
-  border-bottom: 1px solid gray;
+  border-bottom: 1px solid #999;
+  transition-duration: 500ms;
+}
+.searchItem:hover {
+  color: black;
+  background-color: #efefef;
+  cursor: pointer;
 }
 
 .searchResult {
   height: 500px;
   overflow: scroll;
+  border: 1px solid rgb(199, 206, 213);
+  border-radius: 4px;
+  color: #777;
 }
