손님 폰번호 화면에 표시하도록 삽입
검색 결과 클릭시 해당 손님의 폰번호를 쿠폰화면에 보여주도록 수정함.

--- a/src/components/Admin/Info/Coupons/index.css
+++ b/src/components/Admin/Info/Coupons/index.css
@@ -1,7 +1,22 @@
 .couponsDisplay {
   width: 504px;
+  border: 1px solid rgb(199, 206, 213);
+  border-radius: 6px;
 }
 
 .couponsDisplay img {
   width: 50px;
+}
+
+.couponsDisplay-phoneNumber {
+  /* background-color: #eee; */
+  /* padding: 6px 10px; */
+  font-weight: 700;
+}
+
+.couponsPaper {
+  border: 0px;
+  border-radius: 6px;
+  background-color: #efefef;
+  margin: 10px 0px;
 }
