--- a/src/components/Admin/Info/AddCustomer/index.css
+++ b/src/components/Admin/Info/AddCustomer/index.css
@@ -1,7 +1,14 @@
 .addCustomer {
   width: 504px;
   height: 200px;
+  border: 1px solid rgb(199, 206, 213);
+  border-radius: 6px;
   text-align: center;
+}
+.addCustomer .form-control {
+  width: 100%;
+  margin-bottom: 10px;
+  margin-top: 35px;
 }
 
 input {
