--- a/src/components/Admin/Info/Coupons/index.css
+++ b/src/components/Admin/Info/Coupons/index.css
@@ -9,8 +9,7 @@
 }
 
 .couponsDisplay-phoneNumber {
-  /* background-color: #eee; */
-  /* padding: 6px 10px; */
+  font-size: 20px;
   font-weight: 700;
 }
 
@@ -18,5 +17,17 @@
   border: 0px;
   border-radius: 6px;
   background-color: #efefef;
-  margin: 10px 0px;
+  margin-bottom: 10px;
+}
+
+#couponsCountDisplay {
+  color: #333;
+  text-align: right;
+  padding-right: 4px;
+}
+
+#couponsCountDisplay-span {
+  color: rgb(227, 66, 53);
+  font-size: 22px;
+  font-weight: 700;
 }
