--- a/src/components/common/Button.css
+++ b/src/components/common/Button.css
@@ -1,14 +1,15 @@
 .commonButton {
-  display: block;
+  display: inline-block;
   width: 100%;
   border: 0px solid black;
-  background-color: rgb(220, 220, 220);
+  border-radius: 4px;
+  background-color: rgb(253, 202, 10);
   font-size: 20px;
   color: black;
   transition-property: background-color;
   transition-duration: 200ms;
 }
 .commonButton:hover {
-  background-color: rgb(243, 216, 49);
-  color: black;
+  background-color: hsl(46, 98%, 67%);
+  color: rgb(223, 58, 47);
 }
