전체적인 스타일 및 디자인 수정 & 입력폼 입력값에 제한 적용

--- a/src/components/Admin/Info/Coupons/index.css
+++ b/src/components/Admin/Info/Coupons/index.css
@@ -1,7 +1,9 @@
 .couponsDisplay {
   width: 504px;
+  height: 424px;
   border: 1px solid rgb(199, 206, 213);
   border-radius: 6px;
+  background-color: #ffffffbb;
 }
 
 .couponsDisplay img {
@@ -16,7 +18,7 @@
 .couponsPaper {
   border: 0px;
   border-radius: 6px;
-  background-color: #efefef;
+  background-color: #efefefbb;
   margin-bottom: 10px;
 }
 
