--- a/src/components/Admin/Info/AddCustomer/index.css
+++ b/src/components/Admin/Info/AddCustomer/index.css
@@ -1,14 +1,16 @@
 .addCustomer {
   width: 504px;
-  height: 200px;
+  height: 160px;
   border: 1px solid rgb(199, 206, 213);
   border-radius: 6px;
   text-align: center;
+  background-color: #ffffffbb;
+  color: #666;
 }
 .addCustomer .form-control {
   width: 100%;
   margin-bottom: 10px;
-  margin-top: 35px;
+  margin-top: 15px;
 }
 
 input {
