--- a/src/components/Admin/Search/index.css
+++ b/src/components/Admin/Search/index.css
@@ -3,15 +3,15 @@
   padding-top: 6px;
   border: 0px;
   border-bottom: 1px solid rgb(177, 185, 194);
-  border-top-right-radius: 20px;
+  /* border-top-right-radius: 20px; */
   transition-property: background-color;
   transition-duration: 200ms;
   color: #555;
 }
 .searchItem:hover {
   color: #3a3a3a;
-  font-weight: 600;
-  background-color: rgb(253, 202, 10);
+  font-weight: 500;
+  background-color: hsl(46, 98%, 67%);
   cursor: pointer;
 }
 
@@ -31,6 +31,7 @@
   margin: 8px;
   font-weight: 700;
   transition-duration: 200ms;
+  border-radius: 6px;
 }
 #div-addCustomer:hover {
   background-color: hsl(46, 98%, 67%);
