--- a/src/components/SignRouter/SignIn/index.css
+++ b/src/components/SignRouter/SignIn/index.css
@@ -25,3 +25,16 @@ h1 {
   border-top-right-radius: 50%;
   border-top-left-radius: 50%;
 }
+
+.button-signup {
+  margin: 0px;
+}
+
+#signin-form {
+  width: 100%;
+  height: 121px;
+}
+
+.button-signup {
+  margin: 0px;
+}
