--- a/src/components/Admin/Info/Coupons/index.css
+++ b/src/components/Admin/Info/Coupons/index.css
@@ -36,7 +36,7 @@
 
 .couponsMessage {
   background-color: rgb(246, 246, 246);
-  width: 200px;
+  width: 300px;
   padding: 6px;
   border-radius: 10px;
   text-align: center;
@@ -45,7 +45,7 @@
 .couponsMessage-used {
   background-color: rgb(92, 158, 212);
   color: white;
-  width: 200px;
+  width: 300px;
   padding: 6px;
   border-radius: 10px;
   text-align: center;
@@ -54,7 +54,7 @@
 .couponsMessage-fail {
   background-color: rgb(219, 62, 62);
   color: white;
-  width: 200px;
+  width: 300px;
   padding: 6px;
   border-radius: 10px;
   text-align: center;
@@ -63,4 +63,5 @@
 #messagebox {
   margin: auto;
   margin-top: 50px;
+  transition-duration: 300ms;
 }
